Fix: `./gradlew jmh` fails on macOS/Linux due to missing `jdk.incubator.vector` module (#12) (#13)
* fix: enable incubator Vector module for JMH bytecode generator to prevent classloading issues

* docs: update CHANGELOG